# skewEngine

./: .gitignore  CMakeLists.txt  readme.MD  skewEngine.MD
compare/: astra.m
gitnore/: auxf.cu  auxf.cuh
img/: mapaBase.qgz  show.pptx  skew3.xcf
img/skew3Drecursos/: skew3Da.xcf  skew3Db.xcf
notebooks/: Image_reconstruct_using_FBP.ipynb  blurViewer.ipynb  dlltest.ipynb
notebooks/.ipynb_checkpoints/: Image_reconstruct_using_FBP-checkpoint.ipynb  blurViewer-checkpoint.ipynb  dlltest-checkpoint.ipynb
src/: Constants.h  Global.cpp  Global.h  GpuSolver.cu  auxf.cpp  auxf.cu  auxf.cuh  auxf.h  color.cpp  color.h  defaults.h  drawing.cpp  drawing.h  global.cpp  global.h  gpuSolver.cu  gpuSolver.cuh  helper.h  kernelBLUR.h  kernelRADN.h  kernelSDEM.h  kernelUNIT.h  main.cu  main.h  mainV3.h  skewEngine.cu  skewEngine.cuh  structures.h
src/kernelBLUR/: kernelBLUR.h
src/kernelRADN/: kernelRADN.h
src/kernelSDEM/: kernelSDEM.h
src/kernelUNIT/: kernelUNIT.h
